# XiaomiNDEF

./: .gitignore  README.md  build_protobuf.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
proto/: MiConnectProtocol.proto
src/xiaomi_ndef/: __init__.py  _utils.py  base.py  handoff.py  mi_connect.py  ndef.py  nfc.py  tag.py  tnf.py  xiaomi.py
src/xiaomi_ndef/proto/: MiConnectProtocol_pb2.py  MiConnectProtocol_pb2.pyi
tests/: test_xiaomi_ndef.py
